Project/css/style.css
a {
    color: black;
    text-decoration: none;
}

a:hover {
    color: #FA6800;
}

body {
    background: url("/img/maze_white.png")
}

textarea {
    display: block;
    margin-bottom: 15px;
}

nav {
    background-color: black;
    color: white;
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 10;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 5px 0;
}

nav li {
    display: inline;
    padding: 0 9px;
    font-weight: bold;
}

nav a {
    color: #ccc;
}

#content {
    margin-top: 30px;
}

#wrapper {
    font-family: Helvetica, Arial, sans-serif;
}

.article {
    display: inline;
    position: absolute;
    top: 25px;
    margin-left: 20px;
}

.article-title {
    font-size: 2em;
}

.article-widget {
    position: relative;
    margin-bottom: 10px;
}

.comment .commenter {
	font-size: 80%;
}

.details a {
    font-weight: bold;
}

.details span {
    font-size: 80%;
}

.down {
    background: url("/img/arrows.png") no-repeat 17px -110px;
    width: 50px;
    height: 35px
}

.down:hover {
    background-position: 17px -74px;
}

.error {
    color: red;
}

.up {
    background: url("/img/arrows.png") no-repeat 17px 12px;
    width: 50px;
    height: 35px
}

.up:hover {
    background-position: 17px -27px;
}

.vote {
    display: inline-block;
    text-align: center;
    font-size: 1.6em;
}

.vote a {
    display: block;
}

